tests/ui/where-clauses/ignore-err-clauses.stderr
error[E0412]: cannot find type `UUU` in this scope
  --> $DIR/ignore-err-clauses.rs:6:5
   |
LL |     UUU: Copy,
   |     ^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0412`.
